Animations with some whitespace fixes

--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -1,3 +1,18 @@
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.cornell-info {
+  width: 50%;
+  text-align: left;
+  font-size: 1.1rem;
+}
+
+.em {
+  font-weight: 500;
+}
+
 .cornell-logo {
   height: 200px;
   width: 200px;
