--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -17,7 +17,6 @@
 }
 
 .navitems {
-  margin-top: 0;
   list-style-type: none;
   margin-top: 10px;
   padding-left: 0;
