--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html,
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
